[package]
name = "bi-focals"
version = "0.1.0"
authors = ["Mason Stallmo <masonstallmo@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
path = "src/rs/lib.rs"

[dependencies]
wasm-bindgen = "0.2.37"

[dependencies.web-sys]
version = "0.3.14"
features = ["Document", "HtmlCollection", "Element"]
